# webmesh

./: .flake8  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
src/webmesh/: message_protocols.py  message_serializers.py  util.py  utils.py  webmesh_client.py  webmesh_component.py  webmesh_server.py  websocket.py  websocket_server.py
src/webmesh/udp/: binding.py  udp_client.py
src/webmesh/websocket/: abstract_websocket_connection.py  abstract_websocket_handler.py  abstract_websocket_server.py  basic_websocket_handler.py  queued_websocket_connection.py  queued_websocket_server.py  websocket_client.py  websocket_connection.py  websocket_process.py  websocket_server.py
tests/: conftest.py  t_ws_connection.py  test_client.py  test_server.py  test_stud.py
