[metadata]
name = webmesh
version = 0.1.0
author = "Charles Smith"
author_email = "binarskugga@gmail.com"
description = "Connects microservices through a mesh of websockets"
license = "Copyright"

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires > = 3.8
install_requires =
    websockets==9.*
    msgpack==1.0.*

[options.packages.find]
where = src
